chore: update Swagger docs
